--- a/index.html
+++ b/index.html
@@ -4,9 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HTML com JS</title>
+    <title>EBAC Banking</title>
+    <link rel="stylesheet" href="./main.css">
 </head>
 <body>
-    
+    <div class="container">
+        <h1>EBAC Banking</h1>
+        <h2>Depósito</h2>
+        <form>
+            <input type="text" required placeholder="Nome completo do beneficiário" />
+            <input type="number" required placeholder="Número da conta" /> 
+            <input type="number" required placeholder="Valor" />
+            <textarea placeholder="Descrição(opcional)"></textarea>
+            <button type= "submit">Depositar</button>
+        </form>
+    </div>
 </body>
 </html>
