--- a/index.html
+++ b/index.html
@@ -19,5 +19,6 @@
             <button type= "submit" id="btn-depositar">Depositar</button>
         </form>
     </div>
+    <script src="./main.js"></script>
 </body>
 </html>
